# OpenGL-solar-system

./: CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  Model.h  Moon.cpp  Moon.h  ParticleEmitter.cpp  ParticleEmitter.h  README.md  Shader.cpp  Shader.h  ShaderPlanet.cpp  ShaderPlanet.h  Skybox.cpp  Skybox.h  SolarSystem.cpp  SolarSystem.h  SpecialPlanet.cpp  SpecialPlanet.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Venus.cpp  Venus.h  tiny_obj_loader.h
res/models/spaceship/: spaceship.mtl
res/shader/: customShader.frag  customShader.vert  model.frag  model.vert  moon.frag  moon.vert  particle.frag  particle.vert  shaderPlanet.frag  shaderPlanet.vert  skybox.frag  skybox.vert  specialPlanet.frag  specialPlanet.vert  venus.frag  venus.vert
